logic rework